--- a/style.css
+++ b/style.css
@@ -36,6 +36,9 @@ p.valueLi {
   font-size: 28px;
   color: #077;
 }
+.pListClick {
+  text-decoration: line-through;
+}
 #form {
   display: inline-block;
   padding: 10px;
